# A4-Memory

./: .gitignore  LICENSE  README.en.md  README.md  deploy-hexo.sh  eslint.config.mjs  index.html  package-lock.json  package.json  records.html
.github/workflows/: ci.yml  release.yml
css/: style.css
docs/: API.md  FRONTEND_CONTEXT.md  PROJECT_CONTEXT.md  README.en.md
docs/superpowers/specs/: 2026-05-09-android-intel-mac-design.md
js/: __cloud_stub.js  app.js  lookup.js  records.js  settings.js  speech.js  storage.js  updater.js
js/core/: common.js
scripts/: build.mjs  prepare-android-tts.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android/: A4OfflineTtsBridge.kt  A4SpeechBridge.kt  AndroidManifest.xml
src-tauri/android/res/xml/: file_paths.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  offline_tts.rs
tests/: android-tts-build.test.js  core.test.js  motion.test.js  records.test.js  sanitize.test.js  security.test.js  settings.test.js  shell.test.js  speech.test.js  storage.test.js  ui.test.js  updater.test.js  utils.test.js
