[package]
name = "a4-memory"
version = "1.0.15"
description = "A4 Memory — 随机排版背单词"
authors = ["k7tmiz"]
edition = "2021"

[lib]
name = "a4_memory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
