[package]
name = "a4-memory"
version = "1.0.28"
description = "A4 Memory — 随机排版背单词"
authors = ["k7tmiz"]
edition = "2021"

[lib]
name = "a4_memory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
bzip2 = "0.4"
flate2 = "1"
parking_lot = "0.12"

[target.'cfg(not(target_os = "android"))'.dependencies]
sherpa-rs = { version = "0.6", default-features = false, features = ["tts", "static"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"] }
tauri = { version = "2", features = [] }
futures-util = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
